crates/cribo/tests/snapshots/bundled_code@xfail_bundle_third_party_module_map_dependency.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_module_map_dependency/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""A module-map constraint must keep the dependency closure external too.\n\nThe module-map entry pins mapped_pkg to `mapped-pkg>=2`, but the installed\ndistribution is version 1.0: the constraint cannot be satisfied by bundling,\nso mapped_pkg stays external. Its declared dependency dep-pkg is then part of\nan external distribution's requirement closure and must also stay external,\neven though dep_pkg is pure Python and imported directly by the entry module.\n"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
import mapped_pkg
import dep_pkg
print(mapped_pkg.VALUE, dep_pkg.VALUE)
